--- a/package.json
+++ b/package.json
@@ -41,7 +41,6 @@
     "karma-rollup-preprocessor": "^2.0.2",
     "karma-sinon": "^1.0.5",
     "mocha": "^3.0.2",
-    "normalize-scss": "^5.0.3",
     "rollup": "^0.36.0",
     "rollup-plugin-babel": "^2.6.1",
     "rollup-plugin-commonjs": "^5.0.0",
@@ -49,5 +48,9 @@
     "rollup-plugin-uglify": "^1.0.1",
     "run-sequence": "^1.2.2",
     "sinon": "^1.17.5"
+  },
+  "dependencies": {
+    "normalize-scss": "^5.0.3",
+    "form-validator": "git+ssh://git@bitbucket.org/oskarwrobel/form-validator.git#0.2.0"
   }
 }
