--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
   },
   "dependencies": {
     "normalize-scss": "^5.0.3",
-    "form-validator": "git+ssh://git@bitbucket.org/oskarwrobel/form-validator.git#0.2.0"
+    "form-validator": "git+ssh://git@bitbucket.org/oskarwrobel/form-validator.git#0.2.0",
+    "smooth-scroll": "github:cferdinandi/smooth-scroll"
   }
 }
